Fix for wrong coloured Order text label-text spans

--- a/p4m-shared/p4m.scss
+++ b/p4m-shared/p4m.scss
@@ -2143,7 +2143,7 @@ p4m-checkout {
             }
             span {
                 font-weight: 600;
-                &.p4m-lael {
+                &.p4m-label {
                     color: #777;
                 }
             }
